# YOLOPoseVocalFold

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/: keypoints.yaml  pipeline_dinov3_aux_judgement_y11m.yaml  pipeline_manual_oriented_contrast_then_pose_y11m.yaml  pipeline_three_stage_oriented_mixed_reject_96px_y11m.yaml  pipeline_three_stage_oriented_mixed_reject_rect36x60_y11m.yaml  pipeline_three_stage_oriented_mixed_reject_rect48x72_y11m.yaml  pipeline_three_stage_oriented_mixed_reject_y11m.yaml  postprocess.yaml  pretrain_oriented_keypoint_contrast_manual_only_96px_y11m.yaml  pretrain_oriented_keypoint_contrast_manual_only_rect36x60_y11m.yaml  pretrain_oriented_keypoint_contrast_manual_only_rect48x72_y11m.yaml  pretrain_oriented_keypoint_contrast_manual_only_y11m.yaml  pretrain_oriented_keypoint_contrast_manual_y11m.yaml  train_baseline.yaml  train_containment_keypoint_precision_y11m.yaml  train_containment_lambda_sweep.yaml  train_containment_ldp_pseudo_mixedpenalty_copy_y11m.yaml  train_containment_ldp_pseudo_mixedpenalty_y11m.yaml  train_containment_mixed_negative_120_blackpad_y11m.yaml  train_containment_mixed_negative_y11m.yaml  train_dinov3_keypoint_aux_gt396_seed20260525.yaml  train_dinov3_keypoint_aux_y11m.yaml  train_keypoint_local_contrast_ldp_pseudo_y11m.yaml  train_manual_after_oriented_contrast_y11m.yaml  train_stage1_roi_mixed_negative_y11m.yaml  train_stage2_keypoint_local_contrast_ldp_conf040_holdout100_y11m.yaml  train_stage2_mixed_hard_negative_96px_y11m.yaml  train_stage2_mixed_hard_negative_rect36x60_y11m.yaml  (+6 more)
(+57 files in other folders)
