[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolopose-vocalfold"
version = "0.1.0"
description = "Anatomy-constrained YOLO-Pose pipeline for vocal fold ROI localization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "ultralytics>=8.3.0",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["yoloposevf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

